--- a/betterfps_at.cfg
+++ b/betterfps_at.cfg
@@ -3,19 +3,25 @@
 # The transformations have to be made using ASM too or should not affect the transformed code
 # This is useful for patches: Classes that will never be loaded but include code that will be injected into the original class
 
-public net.minecraft.client.Minecraft * # All fields
-public net.minecraft.client.Minecraft *() # All methods
+public net.minecraft.client.Minecraft field_71444_a # memoryReserve
+public net.minecraft.client.Minecraft field_110449_ao # defaultResourcePacks
+public net.minecraft.client.Minecraft func_71384_a()V # init
 
-public net.minecraft.tileentity.TileEntityBeacon * # All fields
-public net.minecraft.tileentity.TileEntityBeacon *() # All methods
-public net.minecraft.tileentity.TileEntityBeacon$BeamSegment *() # All methods
+public net.minecraft.tileentity.TileEntityBeacon field_146010_n # secondaryEffect
+public net.minecraft.tileentity.TileEntityBeacon field_146012_l # levels
+public net.minecraft.tileentity.TileEntityBeacon field_146013_m # primaryEffect
+public net.minecraft.tileentity.TileEntityBeacon field_146015_k # isComplete
+public net.minecraft.tileentity.TileEntityBeacon field_174909_f # beamSegments
+public net.minecraft.tileentity.TileEntityBeacon func_146000_x()V # addEffectsToPlayers
+public net.minecraft.tileentity.TileEntityBeacon func_146003_y()V # updateSegmentColors
+public net.minecraft.tileentity.TileEntityBeacon$BeamSegment func_177262_a()V # incrementHeight
 
-public net.minecraft.tileentity.TileEntityHopper * # All fields
-public net.minecraft.tileentity.TileEntityHopper *() # All methods
+public net.minecraft.tileentity.TileEntityHopper func_145887_i()Z # updateHopper
 
-public net.minecraft.client.renderer.EntityRenderer * # All fields
-public net.minecraft.client.renderer.EntityRenderer *() # All methods
+public net.minecraft.client.renderer.EntityRenderer func_78468_a(IF)V # setupFog
 
-public net.minecraft.client.gui.inventory.GuiContainerCreative * # All fields
-public net.minecraft.client.gui.inventory.GuiContainerCreative *() # All methods
-public net.minecraft.client.gui.inventory.GuiContainerCreative$ContainerCreative
+public net.minecraft.client.gui.inventory.GuiContainerCreative field_147058_w # selectedTabIndex
+public net.minecraft.client.gui.inventory.GuiContainerCreative field_147062_A # searchField
+public net.minecraft.client.gui.inventory.GuiContainerCreative field_147067_x # currentScroll
+public net.minecraft.client.gui.inventory.GuiContainerCreative func_147050_b(Lnet/minecraft/creativetab/CreativeTabs;)V # setCurrentCreativeTab
+public net.minecraft.client.gui.inventory.GuiContainerCreative func_147053_i()V # updateCreativeSearch
